# health-metrics

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ruff.yml
app/backend/: server.py  wsgi.py
app/backend/routes/: api.py  webhook.py
app/frontend/: index.html  package-lock.json
app/frontend/src/: App.css  App.jsx  index.css
app/frontend/src/components/: Header.jsx  HealthMetrics.jsx  PasswordGate.jsx  WeeklyStats.jsx
app/frontend/src/components/plots/: CustomTooltip.jsx  Exercise.jsx  Miles.jsx  Weight.jsx
common/: logger.py
devops/cloud-build/: pipeline-build.yaml  server-build.yaml
devops/dependencies/: pipeline-requirements.txt  server-requirements.txt
devops/docker/: Dockerfile.load  Dockerfile.pipe  Dockerfile.pipeline  Dockerfile.server
infra/: alerting.tf  artifact_registry.tf  backend.tf  bigframes.tf  buckets.tf  cloud_build.tf  cloud_run_job.tf  cloud_run_service.tf  iam.tf  variables.tf  workflow.tf
src/analytics/: dbt_project.yml  profiles.yml
src/analytics/macros/: parse_time_of_day.sql
src/analytics/models/analytics/: cln__metrics_per_day.sql  cln__metrics_per_week.sql  cln__workout_intensity_over_time.sql
src/analytics/models/base/: _sources.yml  base__food_diary.sql  base__health_metrics.sql  base__workouts.sql
src/analytics/models/staging/: _staging.yml
src/health_data/: constants.py  google_helpers.py  helpers.py  load_health_metrics.py  log_helpers.py  log_table.sql  main.py  pipeline_helpers.py
src/service_accounts/: README.md
(+7 files in other folders)
