[project]
dependencies = ["dbt-bigquery==1.8.0", "klondike", "click==8.3.1", "PyDrive2"]
name = "health-metrics"
version = "0.1.0"


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-ignore = [
    "F401",
    "E203",
    "E266",
    "E402",
    "E501",
    "E711",
    "E712",
    "F403",
    "F821",
]
select = ["E", "F", "I"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
